--- a/index.html
+++ b/index.html
@@ -212,14 +212,6 @@
             <button class="navbar-link" data-nav-link>Education</button>
           </li>
 
-          <!-- <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Experience</button>
-          </li> -->
-
-          <!-- <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Project</button>
-          </li> -->
-
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>CV</button>
           </li>
@@ -581,7 +573,7 @@
 
               <span><h4><a href="https://kuet.ac.bd/" target="_blank" style="color: orange;">Khulna University of Engineering & Technology (KUET), Khulna, Bangladesh</a></h4></span>
               <p class="timeline-text">
-              <b>CGPA: 3.48/4.0 (3.64 in last 60 credit hours)</b>
+              <b>CGPA: 3.48/4.0 (among top 45%, 3.64 in last 60 credit hours)</b>
               </p>
 
               <p class="timeline-text">
@@ -892,7 +884,7 @@
 
         <section class="cv">
 
-          <iframe class="cv-iframe" src="https://drive.google.com/file/d/1wqMTkT-cPOOXfkw-qFYQ_yN7KE4R8aWV/preview" allow="autoplay"></iframe>
+          <iframe class="cv-iframe" src="https://drive.google.com/file/d/1NjZMEShI9Hq0CMGFATp7QJwOFA4vQXTK/preview" allow="autoplay"></iframe>
         </section>
 
       </article>
